--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -70,6 +70,10 @@
   padding-left:20px;
 }
 
+.sub_menu_item:hover{
+  filter:brightness(0.9);
+}
+
 
 .top {
   position:relative;
@@ -567,11 +571,25 @@ margin:0px 0  0  70px;
   justify-content: center;
   align-items: center;
 }
-.gyoumu_title{
+/* .gyoumu_title{
   font-size:30px;
   margin-bottom: 50px;
 
+} */
+
+.gyoumu_title {
+  width: 100%;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 25px;
+  /* font-family: "Zen Maru Gothic", sans-serif; */
+  padding-left: 60px;
+
 }
+
 .gyoumu_title p{
   font-size:15px;
   margin-bottom: 50px;
@@ -598,6 +616,156 @@ margin:0px 0  0  70px;
 
 .job_images_gyoumu{
   width:300px;
+}
+
+.blog{
+  width:100%;
+  height: auto;
+  background-color: #fff;
+  font-family:"Noto Serif JP", serif;
+  color:#576066;
+  font-size:30px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Zen Maru Gothic", sans-serif;
+}
+
+
+.blog_title{
+width:950px;
+  margin-bottom: 50px;
+  margin-top:50px;
+}
+
+.blog_title h1{
+  /* background-image: linear-gradient(to left, #0cc0df, #ffde59);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+ 
+}
+
+.blog_title p{
+  font-size:18px;
+}
+
+.blog_list{
+  width:1000px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  background-color:#C1FF72;
+  justify-content: center;
+  border-radius: 12px;
+  margin-bottom: 50px;
+
+}
+
+.blog_item{
+  width:300px;
+  height:350px;
+  display: flex;
+  flex-direction: column;
+  margin:30px 10px 30px 10px;
+  background-color: #fff;
+ 
+
+  border-radius: 10px;
+  border: 3px solid #ddd;
+  padding: 10px;
+  transition: 0.3s;
+
+  
+}
+
+.blog_item:hover{
+  transform:scale(1.1);
+}
+
+.blog_item_title{
+
+  width:100%;
+  height:50px;
+  text-align: center;
+
+ 
+}
+
+.blog_img{
+  width:280px;
+  height: 230px;
+  object-fit: cover;
+  border-radius:5px;
+  margin-bottom: 20px;
+}
+
+.blog_item_title h3{
+  font-size:18px;
+}
+
+.blog_date{
+  font-size:15px;
+  text-align: right;
+  padding-right:10px;
+}
+
+.blog_detail{
+  width:100%;
+  height: auto;
+  background-color: #fff;
+  font-family:"Noto Serif JP", serif;
+  color:#576066;
+  font-size:20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Zen Maru Gothic", sans-serif;}
+
+.blog_detail_title{
+  width:900px;
+  margin-top:50px;
+  margin-bottom:50px;
+}
+
+.publish_date{
+  font-size:20px;
+}
+
+.blog_detail_img{
+  width:800px;
+  height: 350px;
+  object-fit: cover;
+  border-radius:30px;
+  margin-bottom: 10px;
+}
+
+.blog_detail_content{
+  width:900px;
+  line-height: 45px;
+}
+
+.blog_detail_content h3{
+  font-size: 30px;
+  margin: 50px 0 30px 0;
+}
+
+
+.blog_detail_return{
+  width:250px;
+  height:50px;
+  background-color: #f9db64;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  margin:50px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.blog_detail_return:hover{
+
+  filter:brightness(0.8);
+
 }
 
 
@@ -1369,15 +1537,15 @@ margin:0px 0  0  70px;
   display:flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .gaiyou_title {
-  padding-top:50px;
-  width: 100%;
+  padding-top:100px;
+  width: 900px;
 
 
-  padding-left: 65px;
-  padding-right:65px;
+
 
   display: flex;
   align-items: center;
@@ -1387,13 +1555,13 @@ margin:0px 0  0  70px;
 
 
 .gaiyou_table {
-  width: 900x;
+  width: 900px;
   margin-top:30px;
+  margin-bottom: 100px;
   
 
   
-  margin: 0 100px 0 100px;
-  padding:30px;
+
 }
 
 .gaiyou_table table{
@@ -1588,11 +1756,11 @@ margin:0px 0  0  70px;
 }
 
 .rinen_title {
-  width: 100%;
+  width: 900px;
   
   font-size: 30px;
-  padding-left: 100px;
-  margin:30px 0 30px 65px;
+
+  margin:30px 0 30px 0px;
 
   display: flex;
   align-items: center;
@@ -1633,7 +1801,7 @@ margin:0px 0  0  70px;
 
 .content_panflet {
   width: 100%;
-  height: 1200px;
+  height: auto;
   background: #ffffff;
   border-radius: 2px;
 
@@ -1646,10 +1814,11 @@ margin:0px 0  0  70px;
 }
 
 .panflet_title {
-  width: 100%;
-  padding-left:65px;
+  width: 900px;
+
   height: auto;
   font-size:30px;
+  margin:20px 0 20px 0;
 
   
 
@@ -1660,7 +1829,7 @@ margin:0px 0  0  70px;
 
 
 .panflet {
-  width: 90%;
+  width: 900px;
   height: 500px;
   border: 8px solid #c9e265;
   border-image: linear-gradient(to right, #0cc0df -20%, #ffde59 150%);
@@ -1672,6 +1841,7 @@ margin:0px 0  0  70px;
 }
 
 .panflet_content {
+
   display: flex;
   justify-content: center;
 
@@ -1712,11 +1882,21 @@ margin:0px 0  0  70px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  font-size:30px;
+}
+.content_range h3{
+  font-size:25px;
+  padding: 5px 0 10px 0;
+
+}
+
+.content_range p{
+  font-size:18px;
 }
 
 .range_title {
-  width: 100%;
-  padding-left: 65px;
+  width: 900px;
+
 
   display: flex;
   align-items: center;
@@ -1724,18 +1904,18 @@ margin:0px 0  0  70px;
 
 .range_title h1 {
 
-  font-size: 50px;
+
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .range {
-  width: 90%;
+  width: 900px;
   height: auto;
   border: 10px solid #c9e265;
   border-image: linear-gradient(to right, #0cc0df -20%, #ffde59 150%);
   border-image-slice: 1;
-  background-image: ;
+  
   padding: 20px;
 
   margin-bottom: 30px;
@@ -1747,12 +1927,12 @@ margin:0px 0  0  70px;
   margin-top: 20px;
   margin-bottom: 20px;
 
-  font-family: "Hiragino Mincho Pro";
+
   font-size: 35px;
 }
 
 .range_discription {
-  width: 700px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding-left: 35px;
@@ -2394,19 +2574,7 @@ margin:0px 0  0  70px;
   justify-content: space-around;
 }
 
-/*blog*/
-.blog_frame {
-  width: 100%;
-  min-height: 100vh;
-  background: #fff;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-
-
-}
 
 @media (prefers-color-scheme: dark) {
 
@@ -3576,20 +3744,7 @@ margin:0px 0  0  70px;
     align-items: center;
   }
   
-  .panflet_title {
-    width: 1000px;
-    height: 120px;
-  
-    padding-left: 65px;
-  
-    display: flex;
-    align-items: center;
-  }
-  
-  .panflet_title h1 {
-    font-size: 50px;
-  }
-  
+
   .panflet {
     width: 800px;
     height: 500px;
@@ -4318,17 +4473,5 @@ margin:0px 0  0  70px;
     justify-content: space-around;
   }
   
-  /*blog*/
-  .blog_frame {
-    width: 100%;
-    min-height: 100vh;
-    background: black;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
 
-    
-}
 }
