--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -45,12 +45,12 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
 
 
 @-webkit-keyframes square-spin {
-  25% {
+  0% {
+    -webkit-transform: perspective(100px) rotateX(0) rotateY(0);
+    transform: perspective(100px) rotateX(0) rotateY(0); }
+  30% {
     -webkit-transform: perspective(100px) rotateX(180deg) rotateY(0);
-            transform: perspective(100px) rotateX(180deg) rotateY(0); }
-  50% {
-    -webkit-transform: perspective(100px) rotateX(180deg) rotateY(180deg);
-            transform: perspective(100px) rotateX(180deg) rotateY(180deg); }
+            transform: perspective(100px) rotateX(180deg) rotateY(0);  }
   75% {
     -webkit-transform: perspective(100px) rotateX(0) rotateY(180deg);
             transform: perspective(100px) rotateX(0) rotateY(180deg); }
@@ -59,12 +59,12 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
             transform: perspective(100px) rotateX(0) rotateY(0); } }
 
 @keyframes square-spin {
-  25% {
+  0% {
+    -webkit-transform: perspective(100px) rotateX(0) rotateY(0);
+            transform: perspective(100px) rotateX(0) rotateY(0); }
+  30% {
     -webkit-transform: perspective(100px) rotateX(180deg) rotateY(0);
-            transform: perspective(100px) rotateX(180deg) rotateY(0); }
-  50% {
-    -webkit-transform: perspective(100px) rotateX(180deg) rotateY(180deg);
-            transform: perspective(100px) rotateX(180deg) rotateY(180deg); }
+    transform: perspective(100px) rotateX(180deg) rotateY(0);  }
   75% {
     -webkit-transform: perspective(100px) rotateX(0) rotateY(180deg);
             transform: perspective(100px) rotateX(0) rotateY(180deg); }
@@ -178,7 +178,8 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   left:50px;
   width:750px;
   animation-name:fadeUpAnime;
-  animation-duration:6.0s;
+  animation-delay: 550ms;
+  animation-duration:7.0s;
   animation-fill-mode:forwards;
   opacity:0;
 }
@@ -221,9 +222,9 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   position:absolute;
   top:300px;
   right:70px;
-
+  animation-delay: 550ms;
   animation-name:fadeUpAnime;
-animation-duration:8.0s;
+  animation-duration:9.0s;
 animation-fill-mode:forwards;
 opacity:0;
 }
