🎨 アニメーションタイミング修正

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -178,8 +178,8 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   left:50px;
   width:750px;
   animation-name:fadeUpAnime;
-  animation-delay: 550ms;
-  animation-duration:7.0s;
+  animation-delay: 6.0s;
+  animation-duration:3.0s;
   animation-fill-mode:forwards;
   opacity:0;
 }
@@ -194,7 +194,7 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
 .top_hanabira{
   width:200px;
   position:absolute;
- 
+  animation-delay: 6.5s;
   animation-name:sakuraMove;
   animation-duration:13.0s;
   animation-fill-mode:forwards;
@@ -222,9 +222,9 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   position:absolute;
   top:300px;
   right:70px;
-  animation-delay: 550ms;
+  animation-delay: 7.0s;
   animation-name:fadeUpAnime;
-  animation-duration:9.0s;
+  animation-duration:3.0s;
 animation-fill-mode:forwards;
 opacity:0;
 }
