🎨 会社概要見た目修正

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1590,7 +1590,7 @@ width:950px;
 /*会社概要*/
 .content_gaiyou {
   width: 100%;
-  height: 100vh;
+  height: 750px;
   background: #ffffff;
   font-family:  "Noto Serif JP", serif;
   color:#576066;
