--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -144,8 +144,10 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   justify-content: space-between;
   padding-bottom: 20px;
   position: relative;
-  overflow:auto;
+
   z-index:0;
+
+
   
 }
 
@@ -239,6 +241,40 @@ opacity:0;
     opacity: 1;
   transform: translateY(0);
   }
+}
+
+
+
+.top_button{
+  width:350px;
+  height:60px;
+  background-color: #fff;
+  position: absolute;
+  z-index: 50;
+  right:0;
+  top:30px;
+  display: flex;
+  align-items: center;
+  padding-left:30px;
+  border-left: 10px solid #C1FF72;
+  font-family: "Noto Serif JP", serif; ;
+
+  
+
+}
+
+.top_button:hover{
+  transform: translateX(15px); 
+  filter: brightness(90%);
+  transition: transform 0.3s ease;
+
+}
+
+
+.material-symbols-outlined {
+  font-size:30px;
+  color:#ddd;
+  padding-left:20px;
 }
 
 
@@ -492,7 +528,7 @@ margin:0px 0  0  70px;
 }
 
 .strength_top{
-  width:100%;
+  width:1000px;
   height:400px;
 
 }
@@ -505,11 +541,12 @@ margin:0px 0  0  70px;
 }
 
 .jinzairyoku_png{
-  width:550px;
-  margin-left:100px;
+  max-width:500px;
+  margin-left:60px;
 }
 
 .strength_content{
+
   width:100%;
   height: auto;
   background-color: #fff;
@@ -522,21 +559,22 @@ margin:0px 0  0  70px;
   align-items: center;
   font-family:"Noto Serif JP", serif; 
   color:#576066;
+  overflow-x: auto;
 }
 
 .strength_jinzairyoku h3 {
-  margin-top:-100px;
+  margin-top:-120px;
   margin-left:80px;
-  font-size:30px;
+  font-size:29px;
   line-height: 50px;
 }
 .jinzairyoku_sentence {
-  width:500px;
-  font-size:20px;
+  width:480px;
+  font-size:19px;
 
   line-height: 45px;
 
-  margin:30px 30px 30px 100px;
+  margin:30px 30px 30px 80px;
 
 }
 
@@ -549,33 +587,34 @@ margin:0px 0  0  70px;
   font-family:"Noto Serif JP", serif; 
   color:#576066;
   position:relative;
+  overflow-x: auto;
 }
 
 .strength_ikusei_png{
   width:620px;
   position:absolute;
-  left:100px;
+  left:60px;
   top:0px;
   
 }
 .strength_ikuseiryoku h3 {
   margin-left:80px;
-  font-size:30px;
+  font-size:29px;
   position:absolute;
   top:380px;
-  left:100px;
+  left:20px;
   line-height: 50px;
 }
 .ikuseiryoku_sentence {
   position:absolute;
   top:-40px;
-  left:630px;
+  left:610px;
   width:500px;
-  font-size:20px;
+  font-size:19px;
   line-height: 45px;
   padding:0 50px 0 50px;
 
-  margin:30px 30px 30px 80px;
+  margin:30px 30px 30px 50px;
 
 }
 
@@ -586,36 +625,36 @@ margin:0px 0  0  70px;
   align-items: center;
   font-family:"Noto Serif JP", serif; 
   color:#576066;
-
+  overflow-x: auto;
 }
 
 .strength_taiou_png1{
-  width:500px;
-  margin-left:100px;
+  width:480px;
+  margin-left:60px;
   margin-top:50px;
 }
 
 .strength_taiou_png2{
-  width:500px;
-  margin-left:50px;
+  width:480px;
+  margin-left:30px;
   margin-top:-70px;
 }
 
 .strength_taiouryoku h3 {
   width:500px;
   margin-top:80px;
-  margin-left:130px;
-  font-size:30px;
+  margin-left:100px;
+  font-size:29px;
   line-height: 50px;
 
 }
 
 .taiou_sentence{
   width:500px;
-  font-size:20px;
+  font-size:19px;
   line-height: 45px;
   margin-top:-100px;
-  margin-left:100px;
+  margin-left:60px;
 }
 
 
