--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -1,11 +1,50 @@
-@media (max-width: 900px) {
+@media (max-width: 800px) {
+  .joblist_wrapper{
+    width:100%;
+    position: absolute;
+    top:620px;
+    left:15px;
+    }
+  
+  .joblist{
+    display:flex;
+    justify-content:space-around;
+    list-style: none;
+  }
+  
+  .job_box{
+    position:relative;
+    width:150px;
+    height: 150px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+  }
+
+  .job_images{
+    width:120px;
+    
+  }
+  
+
+  .job_box_disable{
+    display:none;
+  }
+  
+  
   .header {
     width: 100%;
 
-    height: 250px;
+    height: 150px;
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    position:relative;
+  }
+
+  .mik_logo{
+    width:250px;
   }
 
   /*ハンバーガーメニュー*/
@@ -36,28 +75,410 @@
     font-family: "Zen Maru Gothic", sans-serif;
   }
 
-  .top_image_frame {
-    background-image: url("/images/phone600.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+
+  .single_menu_bar {
+    display: flex;
+    position:absolute;
+    left:20px;
+    top:90px;
+    flex-direction: column;
+    padding-top: 20px;
+    overflow: visible;
+  }
+  
+  .single_menu_bar_items {
+    width: 300px;
+    height: auto;
+    display: flex;
+  
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: space-around;
+    
+  }
+  
+  .single_menu_tab {
+    width: auto;
+    white-space: nowrap;
+    padding: 0 20px 20px 20px;
+  
+    height: auto;
+    display: flex;
+    font-weight: 400;
+    font-family:  "Noto Serif JP", serif;
+    color: #576066;
+  }
+  .sub_menu {
+    width:180px;
+    height:200px;
+    display:flex;
+    flex-direction: column;
+    position:absolute;
+    margin-top:30px; 
+  
+   
+    list-style: none;
+  }
+  .sub_menu_item{
+    margin: 5px 5px;
+    font-size:15px;
+    background: linear-gradient(270deg,rgba(255,255,255,0) 0, #fff 80%) ;
+    padding-left:20px;
+  }
+  
+  .sub_menu_item:hover{
+    filter:brightness(0.9);
+  }
+
+  .top {
+    position:relative;
+    background-color:#C1FF72;
     width: 100%;
     height: 800px;
-
+  
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    padding-bottom: 0px;
-
+    padding-bottom: 20px;
     position: relative;
+  
+    z-index:0;
   }
 
-  .female_image {
-    position: absolute;
-    top: 200px;
-    right: 50px;
+  .top_sapporo {
+    min-width:500px;
+    height:auto;
+  
   }
+  
+  .top_flexible {
+    width:25px;
+    position: absolute;
+    right: 30px;
+    top:250px;
+  
+  }
+
+
+  
+  .top_sakura{
+    position:absolute;
+    top:0px;
+    left:-20px;
+    width:300px;
+  }
+
+  .top_hanabira{
+    width:200px;
+    position:absolute;
+    animation-delay: 6.5s;
+    animation-name:sakuraMove;
+    animation-duration:13.0s;
+    animation-fill-mode:forwards;
+    opacity:0;
+  }
+  
+  @keyframes sakuraMove{
+    0%{
+      opacity: 0.0;
+    transform: translate(0,0);
+   
+    }
+  
+  
+    100%{
+      opacity: 1;
+    transform: translate(850px,250px) scale(4.5);
+  
+    }
+  }
+
+  .top_efirst{
+    position:absolute;
+    top:160px;
+    left:40px;
+    width:80%;
+    animation-name:fadeUpAnime;
+    animation-delay: 6.0s;
+    animation-duration:3.0s;
+    animation-fill-mode:forwards;
+    opacity:0;
+  }
+  
+  .top_box_tunagu{
+    width:320px;
+  
+    position:absolute;
+    top:320px;
+    left:30px;
+    animation-delay: 7.0s;
+    animation-name:fadeUpAnime;
+    animation-duration:3.0s;
+  animation-fill-mode:forwards;
+  opacity:0;
+  }
+  
+  @keyframes fadeUpAnime{
+    from {
+      opacity: 0;
+    transform: translateY(50px);
+    }
+  
+    to {
+      opacity: 1;
+    transform: translateY(0);
+    }
+  }
+
+  .top_resourcecompany {
+    width:300px;
+    position: absolute;
+    left: 35px;
+    top:500px;
+  
+  }
+
+  
+  .top_button{
+    width:350px;
+    height:60px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 50;
+    right:0;
+    top:30px;
+    display: flex;
+    align-items: center;
+    padding-left:20px;
+    border-left: 10px solid #C1FF72;
+    font-family: "Noto Serif JP", serif; 
+    color:#576066;
+    box-shadow:10px 3px 6px #bbb;  
+  }
+
+
+.about{
+  width:100%;
+  height: auto;
+  background-color: #fff;
+  position:relative;
+  
+
+}
+
+.about_top{
+  position:relative;
+  width:100%;
+  height:850px;
+  overflow-x: auto;
+  overflow-y: unset;
+ 
+ 
+}
+
+.about_mik{
+  width:250px;
+  margin-top:50px;
+  margin-left: 60px;
+
+
+}
+
+.about_top_text{
+  position:absolute;
+  font-size:17px;
+  line-height: 35px;
+  font-family:"Noto Serif JP", serif; 
+  width:400px;
+  color:#576066;
+  top:250px;
+  left:30px;
+
+
+}
+
+.about_top_text h3{
+  font-size:30px;
+  margin-bottom: 10px;
+}
+
+.circle_wrapper{
+  display:flex;
+  width:100%;
+  height:auto;
+  align-items: center;
+
+}
+.about_circle{
+  
+  width:350px;
+  margin-left:80px;
+  margin-top:260px;
+
+}
+
+.about_description{
+  margin-top:30px;
+  margin-left:50px;
+  font-size:18px;
+  font-family:"Noto Serif JP", serif;
+  color:#576066;
+  line-height: 15px;
+}
+
+.job_card_list{
+  margin:0px 0  0  0px;
+    width:1000px;
+    display:flex;
+    justify-content:space-around;
+    list-style: none;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+    
+  }
+
+
+.strength{
+  width:100%;
+  height: auto;
+  background-color: #fff;
+  padding-left:50px;
+
+}
+
+.strength_top{
+  width:100%;
+  height:300px;
+
+}
+
+
+.strength_mik{
+  width:350px;
+  margin-left:20px;
+}
+
+.jinzairyoku_png{
+width:350px;
+margin-left: -60px;
+margin-bottom: 30px;
+  
+}
+
+.strength_content{
+
+  width:100%;
+  height: auto;
+  background-color: #fff;
+}
+
+
+.strength_jinzairyoku{
+  width:100%;
+  height:auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  font-family:"Noto Serif JP", serif; 
+  color:#576066;
+  overflow-x: auto;
+}
+
+.strength_jinzairyoku h3 {
+  margin-top:-120px;
+  margin-left:-30px;
+  font-size:29px;
+  line-height: 50px;
+}
+.jinzairyoku_sentence {
+  width:350px;
+  font-size:17px;
+  line-height: 30px;
+  margin:30px 30px 80px -30px;
+
+}
+.strength_ikuseiryoku{
+width:100%;
+height:800px;
+display:flex;
+flex-direction: column;
+align-items: center;
+font-family:"Noto Serif JP", serif; 
+color:#576066;
+position:relative;
+overflow-x: auto;
+}
+
+.strength_ikusei_png{
+width:450px;
+position:absolute;
+left:-10px;
+top:0px;
+}
+
+.strength_ikuseiryoku h3 {
+  margin-left:-10px;
+  font-size:25px;
+  position:absolute;
+  top:280px;
+  left:20px;
+  line-height: 50px;
+}
+.ikuseiryoku_sentence {
+  position:absolute;
+  top:420px;
+  left:-80px;
+  width:480px;
+  font-size:17px;
+  line-height: 30px;
+  padding:0 50px 0 50px;
+
+  margin:30px 30px 30px 50px;
+
+}
+
+.strength_taiouryoku{
+  width:100%;
+  height:800px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  font-family:"Noto Serif JP", serif; 
+  color:#576066;
+
+}
+
+.strength_taiou_png1{
+  /* width:380px;
+  margin-left:60px;
+  margin-top:50px; */
+  display:none;
+}
+
+.strength_taiou_png2{
+  width:410px;
+  margin-left:80px;
+  margin-top:-70px;
+}
+
+.strength_taiouryoku h3 {
+  width:400px;
+  margin-top:0px;
+  margin-left:-20px;
+  font-size:24px;
+  line-height: 45px;
+  margin-bottom:30px;
+
+}
+
+.taiou_sentence{
+  width:500px;
+  font-size:17px;
+  line-height: 35px;
+  margin-top:-100px;
+  margin-left:60px;
+}
+
 
   .menu_bar {
     margin-top: 60px;
