--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -342,7 +342,7 @@
   width:100%;
   height: auto;
   background-color: #fff;
- 
+  padding-left:0px;
 
 }
 
@@ -386,7 +386,7 @@ margin-bottom: 30px;
 
 .strength_jinzairyoku h3 {
   margin-top:-120px;
-  margin-left:0px;
+  margin-left:10px;
   font-size:29px;
   line-height: 50px;
 }
@@ -394,7 +394,7 @@ margin-bottom: 30px;
   width:350px;
   font-size:17px;
   line-height: 30px;
-  margin:30px 30px 80px 0px;
+  margin:30px 30px 80px 10px;
 
 }
 .strength_ikuseiryoku{
@@ -412,12 +412,12 @@ overflow-x: auto;
 .strength_ikusei_png{
 width:450px;
 position:absolute;
-left:-10px;
+left:10px;
 top:0px;
 }
 
 .strength_ikuseiryoku h3 {
-  margin-left:-10px;
+  margin-left:10px;
   font-size:25px;
   position:absolute;
   top:280px;
@@ -427,10 +427,10 @@ top:0px;
 .ikuseiryoku_sentence {
   position:absolute;
   top:420px;
-  left:-90px;
-  width:400px;
+  left:-70px;
+  width:420px;
   font-size:17px;
-  line-height: 30px;
+  line-height: 35px;
   padding:0 50px 0 50px;
 
   margin:30px 30px 30px 50px;
