--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -269,7 +269,7 @@
 .about_top{
   position:relative;
   width:100%;
-  height:850px;
+  height:950px;
   overflow-x: auto;
   overflow-y: unset;
  
@@ -277,9 +277,9 @@
 }
 
 .about_mik{
-  width:250px;
+  width:220px;
   margin-top:50px;
-  margin-left: 60px;
+  margin-left: 20px;
 
 
 }
@@ -287,9 +287,9 @@
 .about_top_text{
   position:absolute;
   font-size:17px;
-  line-height: 35px;
+  line-height: 32px;
   font-family:"Noto Serif JP", serif; 
-  width:400px;
+  width:300px;
   color:#576066;
   top:250px;
   left:30px;
@@ -311,9 +311,9 @@
 }
 .about_circle{
   
-  width:350px;
-  margin-left:80px;
-  margin-top:260px;
+  width:300px;
+  margin-left:60px;
+  margin-top:350px;
 
 }
 
@@ -399,7 +399,7 @@ margin-bottom: 30px;
 }
 .strength_ikuseiryoku{
 width:100%;
-height:850px;
+height:880px;
 display:flex;
 flex-direction: column;
 align-items: center;
@@ -1927,7 +1927,7 @@ top:0px;
   }
 
   .contact_title {
-    width: 100%;
+    width: 90%;
     height: 120px;
     padding: 30px;
 
@@ -1935,8 +1935,8 @@ top:0px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: -60px;
-    padding-top: 30px;
+    margin-bottom: 60px;
+    padding: 30px 20px 0 20px;
   }
 
   .contact_title h1 {
@@ -1945,11 +1945,11 @@ top:0px;
   }
 
   .contact {
-    margin-top: 90px;
+    margin-top: 0px;
   }
 
   .contact_form {
-    width: 80%;
+    width: 95%;
     height: auto;
 
     padding: 10px;
@@ -2262,14 +2262,16 @@ top:0px;
     width: 100%;
     height: auto;
     background: #ffffff;
-    //border: 18px solid rgb(0,0,0,0.1);
+    border: 18px solid rgb(0,0,0,0.1);
     border-radius: 2px;
+
   }
 
   .gaiyou_title {
     width: 100%;
     height: auto;
     padding-left: 0px;
+    
     padding-top: 30px;
     display: flex;
     align-items: center;
@@ -2277,13 +2279,13 @@ top:0px;
   }
 
   .gaiyou_title h1 {
-    //color:#C9E265;
+ 
     font-size: 40px;
   }
 
   .gaiyou_table {
     margin: 30px;
-    width: 600x;
+    width: 100%;
     border: 0.5px solid;
     border-collapse: collapse;
   }
@@ -2299,15 +2301,80 @@ top:0px;
   }
 
   /*blog*/
-  .blog_frame {
-    width: 100%;
-    min-height: 100vh;
-    background: #fff;
-
-    display: flex;
-    justify-content: center;
+  .blog{
+    width:100%;
+    height: auto;
+    background-color: #fff;
+    font-family:"Noto Serif JP", serif;
+    color:#576066;
+    font-size:30px;
+    display:flex;
+    flex-direction: column;
     align-items: center;
+    font-family: "Zen Maru Gothic", sans-serif;
   }
+  
+  
+  .blog_title{
+  width:100%;
+    margin-bottom: 50px;
+    margin-top:50px;
+  }
+
+
+.blog_title p{
+  font-size:18px;
+}
+
+.blog_list{
+  width:95%;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  background-color:#C1FF72;
+  justify-content: center;
+  border-radius: 12px;
+  margin-bottom: 50px;
+
+}
+
+.blog_detail{
+  width:100%;
+  height: auto;
+  background-color: #fff;
+  font-family:"Noto Serif JP", serif;
+  color:#576066;
+  font-size:18px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Zen Maru Gothic", sans-serif;}
+
+.blog_detail_title{
+  width:90%;
+  margin-top:50px;
+  margin-bottom:50px;
+}
+
+
+.blog_detail_img{
+  width:90%;
+  height: 350px;
+  object-fit: cover;
+  border-radius:30px;
+  margin-bottom: 10px;
+}
+
+.blog_detail_content{
+  width:88%;
+  line-height: 43px;
+}
+
+.blog_detail_content h3{
+  font-size: 30px;
+  margin: 50px 0 30px 0;
+}
+
 
   @media (prefers-color-scheme: dark) {
     .header {
@@ -3824,7 +3891,7 @@ top:0px;
     }
 
     .contact_title {
-      width: 100%;
+      width: 90%;
       height: 120px;
       padding: 30px;
 
@@ -3838,7 +3905,7 @@ top:0px;
 
     .contact_title h1 {
       font-size: 40px;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
     }
 
     .contact {
@@ -4174,7 +4241,7 @@ top:0px;
     }
 
     .gaiyou_title h1 {
-      //color:#C9E265;
+ 
       font-size: 40px;
     }
 
@@ -4196,14 +4263,6 @@ top:0px;
     }
 
     /*blog*/
-    .blog_frame {
-      width: 100%;
-      min-height: 100vh;
-      background: black;
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
   }
 }
