--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -262,7 +262,10 @@
   height: auto;
   background-color: #fff;
   position:relative;
-  
+  display: flex;
+  flex-direction: column;
+
+
 
 }
 
@@ -272,14 +275,17 @@
   height:950px;
   overflow-x: auto;
   overflow-y: unset;
- 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
  
 }
 
 .about_mik{
-  width:220px;
-  margin-top:50px;
-  margin-left: 20px;
+
+  width:200px;
+
+  margin-left: -120px; 
 
 
 }
@@ -292,7 +298,7 @@
   width:300px;
   color:#576066;
   top:250px;
-  left:30px;
+  left:0px;
 
 
 }
