--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -86,6 +86,10 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
 
   justify-content: space-between;
 }
+
+.humberger{
+  display:none;
+}
 .single_menu_bar {
   display: flex;
   flex-direction: column;
