--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -179,13 +179,13 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   width:450px;
   position: absolute;
   left: 60px;
-  top:450px;
+  top:420px;
 
 }
 
 .top_efirst{
   position:absolute;
-  top:180px;
+  top:150px;
   left:50px;
   width:750px;
   animation-name:fadeUpAnime;
@@ -233,7 +233,7 @@ animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
   position:absolute;
   top:300px;
 
-  left:550px;
+  left:530px;
   animation-delay: 7.0s;
   animation-name:fadeUpAnime;
   animation-duration:3.0s;
@@ -262,15 +262,16 @@ opacity:0;
   position: absolute;
   z-index: 50;
   right:0;
-  top:30px;
+  top:45px;
   display: flex;
   align-items: center;
-  padding-left:20px;
-  border-left: 10px solid #C1FF72;
+  padding-left:40px;
+  border-left: 20px solid #ddd;
   font-family: "Noto Serif JP", serif; 
   color:#576066;
   box-shadow:10px 3px 6px #bbb;
-
+  border-top-left-radius: 10px; 
+  border-bottom-left-radius: 10px; 
   
 
 }
@@ -283,10 +284,16 @@ opacity:0;
 }
 
 .top_button_span{
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  color:#C1FF72;
-  margin-right: 10px;
+
+  position: absolute;
+  left:-20px;
+  top:-20px;
+
+}
+
+.top_koinobori{
+
+  width:50px;
 }
 
 .material-symbols-outlined {
