--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -292,11 +292,11 @@
     position: absolute;
     z-index: 50;
     right:0;
-    top:30px;
+    top:60px;
     display: flex;
     align-items: center;
-    padding-left:20px;
-    border-left: 10px solid #C1FF72;
+    padding-left:40px;
+    border-left: 20px solid #ddd;
     font-family: "Noto Serif JP", serif; 
     color:#576066;
     box-shadow:10px 3px 6px #bbb;  
