--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -382,58 +382,84 @@ opacity:0;
   width:100%;
   height: auto;
   background-color: #fff;
-  position:relative;
+
+
   
 
 }
 
 .about_top{
-  position:relative;
+
   width:100%;
-  height:850px;
-  overflow-x: auto;
-  overflow-y: unset;
+  height:auto;
+
+  text-align: left;
  
  
+}
+
+.about_square{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.about_square_column1{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about_square_column1_left{
+  width:500px;
+  padding:30px;
+  text-align:end;
+
+
 }
 
 .about_mik{
   width:320px;
-  margin-top:50px;
-  margin-left:220px;
 
 }
 
-.about_top_text{
-  position:absolute;
+.about_square_column1_right{
+  
   font-size:19px;
   line-height: 35px;
   font-family:"Noto Serif JP", serif; 
   margin-left:50px;
 
-  width:550px;
+  width:500px;
   color:#576066;
-  top:70px;
-  left:560px;
-
+  padding: 50px 0px 20px 0;
 }
 
-.about_top_text h3{
+.about_square_column1_right h3{
   font-size:48px;
   margin-bottom: 30px;
 }
 
-.circle_wrapper{
+
+.about_square_column2{
   display:flex;
   width:100%;
   height:auto;
   align-items: center;
-
+  justify-content:center;
+  margin-bottom:60px;
 }
+
+
+
+
+
+
+
 .about_circle{
   
-  width:500px;
-  margin-left:400px;
+  width:450px;
+
 
 }
 .about_description{
