--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -327,45 +327,42 @@
  
 }
 
+.about_square_column1{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about_square_column1_left{
+  width:500px;
+  padding:60px;
+  text-align:center;
+}
+
 .about_mik{
 
   width:200px;
-
-  margin-left: -120px; 
-
-
 }
 
-.about_top_text{
-  position:absolute;
-  font-size:17px;
-  line-height: 32px;
-  font-family:"Noto Serif JP", serif; 
-  width:300px;
+.about_square_column1_right{
+
+text-align: center;
+
+  width:500px;
   color:#576066;
-  top:250px;
-  left:0px;
-
-
+  padding: 50px 0px 20px 0;
 }
 
-.about_top_text h3{
-  font-size:30px;
-  margin-bottom: 10px;
+.about_square_column2{
+  padding-top: 60px;
 }
 
-.circle_wrapper{
-  display:flex;
-  width:100%;
-  height:auto;
-  align-items: center;
 
-}
 .about_circle{
   
-  width:300px;
-  margin-left:60px;
-  margin-top:350px;
+  width:350px;
+ 
 
 }
 
