--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -1,38 +1,35 @@
 @media (max-width: 800px) {
-  .joblist_wrapper{
-    width:100%;
+  .joblist_wrapper {
+    width: 100%;
     position: absolute;
-    top:620px;
-    left:15px;
-    }
-  
-  .joblist{
-    display:flex;
-    justify-content:space-around;
+    top: 620px;
+    left: 15px;
+  }
+
+  .joblist {
+    display: flex;
+    justify-content: space-around;
     list-style: none;
   }
-  
-  .job_box{
-    position:relative;
-    width:150px;
+
+  .job_box {
+    position: relative;
+    width: 150px;
     height: 150px;
     background-color: #fff;
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
   }
 
-  .job_images{
-    width:120px;
-    
+  .job_images {
+    width: 120px;
   }
-  
 
-  .job_box_disable{
-    display:none;
+  .job_box_disable {
+    display: none;
   }
-  
-  
+
   .header {
     width: 100%;
 
@@ -40,11 +37,11 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    position:relative;
+    position: relative;
   }
 
-  .mik_logo{
-    width:250px;
+  .mik_logo {
+    width: 250px;
   }
 
   /*ハンバーガーメニュー*/
@@ -62,7 +59,7 @@
     color: rgba(0, 0, 0, 0.6);
     margin-bottom: 20px;
     margin-left: 5px;
-    font-family:  "Noto Serif JP", serif;
+    font-family: "Noto Serif JP", serif;
   }
   .ham2_menu_item {
     width: 200px;
@@ -75,7 +72,6 @@
     font-family: "Zen Maru Gothic", sans-serif;
   }
 
-
   /* .single_menu_bar {
     display: flex;
     position:absolute;
@@ -85,71 +81,67 @@
     padding-top: 20px;
     overflow: visible;
   } */
-  .single_menu_bar{
-    display:none;
+  .single_menu_bar {
+    display: none;
   }
 
-  .humberger{
-    display:block;
-    position:absolute;
-    right:10px;
-  
+  .humberger {
+    display: block;
+    position: absolute;
+    right: 10px;
   }
 
-  .ham_menu_list{
-    width:300px;
+  .ham_menu_list {
+    width: 300px;
   }
-  
+
   .single_menu_bar_items {
     width: 300px;
     height: auto;
     display: flex;
-  
+
     padding-top: 10px;
     padding-bottom: 10px;
     justify-content: space-around;
-    
   }
-  
+
   .single_menu_tab {
     width: auto;
     white-space: nowrap;
     padding: 0 20px 20px 20px;
-  
+
     height: auto;
     display: flex;
     font-weight: 400;
-    font-family:  "Noto Serif JP", serif;
+    font-family: "Noto Serif JP", serif;
     color: #576066;
   }
   .sub_menu {
-    width:180px;
-    height:auto;
-    display:flex;
+    width: 180px;
+    height: auto;
+    display: flex;
     flex-direction: column;
-    position:absolute;
-    margin-top:0px; 
-    top:0px;
-    right:300px;
+    position: absolute;
+    margin-top: 0px;
+    top: 0px;
+    right: 300px;
     background-color: #fff;
-    padding:10px;
+    padding: 10px;
     border-radius: 5px;
-    border:1px solid #576066;
+    border: 1px solid #576066;
     z-index: 50;
 
-  
-   
     list-style: none;
   }
-  .sub_menu_item{
+  .sub_menu_item {
     margin: 8px 5px;
-    font-size:15px;
-    background: linear-gradient(270deg,rgba(255,255,255,0) 0, #fff 80%) ;
-    padding-left:20px;
+    font-size: 15px;
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0, #fff 80%);
+    padding-left: 20px;
   }
-  
-  .sub_menu_item:hover{
-    filter:brightness(0.9);
+
+  .sub_menu_item:hover {
+    filter: brightness(0.9);
   }
 
   .ham_menu_item {
@@ -159,375 +151,372 @@
     color: rgba(0, 0, 0, 0.6);
     margin-bottom: 20px;
     margin-left: 5px;
-    font-family:  "Noto Serif JP", serif;
-    position:relative;
+    font-family: "Noto Serif JP", serif;
+    position: relative;
   }
 
-  .hamburger_sub{
-    width:180px;
-    height:200px;
-    display:flex;
+  .hamburger_sub {
+    width: 180px;
+    height: 200px;
+    display: flex;
     flex-direction: column;
-    position:absolute;
-    margin-top:30px;  
+    position: absolute;
+    margin-top: 30px;
     list-style: none;
-    right:100px;
-    overflow:visible;
-
+    right: 100px;
+    overflow: visible;
   }
 
   .top {
-    position:relative;
-    background-color:#C1FF72;
+    position: relative;
+    background-color: #c1ff72;
     width: 100%;
     height: 800px;
-  
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding-bottom: 20px;
     position: relative;
-  
-    z-index:0;
+
+    z-index: 0;
   }
 
   .top_sapporo {
-    min-width:500px;
-    height:auto;
-  
+    min-width: 500px;
+    height: auto;
   }
-  
+
   .top_flexible {
-    width:25px;
+    width: 25px;
     position: absolute;
     right: 30px;
-    top:250px;
-  
+    top: 250px;
   }
 
-
-  
-  .top_sakura{
-    position:absolute;
-    top:0px;
-    left:-20px;
-    width:300px;
+  .top_sakura {
+    position: absolute;
+    top: 0px;
+    left: -20px;
+    width: 300px;
   }
 
-  .top_hanabira{
-    width:200px;
-    position:absolute;
+  .top_hanabira {
+    width: 200px;
+    position: absolute;
     animation-delay: 6.5s;
-    animation-name:sakuraMove;
-    animation-duration:13.0s;
-    animation-fill-mode:forwards;
-    opacity:0;
+    animation-name: sakuraMove;
+    animation-duration: 13s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  @keyframes sakuraMove{
-    0%{
-      opacity: 0.0;
-    transform: translate(0,0);
-   
+
+  @keyframes sakuraMove {
+    0% {
+      opacity: 0;
+      transform: translate(0, 0);
     }
-  
-  
-    100%{
+
+    100% {
       opacity: 1;
-    transform: translate(850px,250px) scale(4.5);
-  
+      transform: translate(850px, 250px) scale(4.5);
     }
   }
 
-  .top_efirst{
-    position:absolute;
-    top:160px;
-    left:40px;
-    width:80%;
-    animation-name:fadeUpAnime;
-    animation-delay: 6.0s;
-    animation-duration:3.0s;
-    animation-fill-mode:forwards;
-    opacity:0;
+  .top_efirst {
+    position: absolute;
+    top: 160px;
+    left: 40px;
+    width: 80%;
+    animation-name: fadeUpAnime;
+    animation-delay: 6s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  .top_box_tunagu{
-    width:320px;
-  
-    position:absolute;
-    top:320px;
-    left:30px;
-    animation-delay: 7.0s;
-    animation-name:fadeUpAnime;
-    animation-duration:3.0s;
-  animation-fill-mode:forwards;
-  opacity:0;
+
+  .top_box_tunagu {
+    width: 320px;
+
+    position: absolute;
+    top: 320px;
+    left: 30px;
+    animation-delay: 7s;
+    animation-name: fadeUpAnime;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  @keyframes fadeUpAnime{
+
+  @keyframes fadeUpAnime {
     from {
       opacity: 0;
-    transform: translateY(50px);
+      transform: translateY(50px);
     }
-  
+
     to {
       opacity: 1;
-    transform: translateY(0);
+      transform: translateY(0);
     }
   }
 
   .top_resourcecompany {
-    width:300px;
+    width: 300px;
     position: absolute;
     left: 35px;
-    top:500px;
-  
+    top: 500px;
   }
 
-  
-  .top_button{
-    width:350px;
-    height:60px;
+  .top_button {
+    width: 350px;
+    height: 60px;
     background-color: #fff;
     position: absolute;
     z-index: 50;
-    right:0;
-    top:60px;
+    right: 0;
+    top: 20px;
     display: flex;
     align-items: center;
-    padding-left:40px;
-    border-left: 20px solid #ddd;
-    font-family: "Noto Serif JP", serif; 
-    color:#576066;
-    box-shadow:10px 3px 6px #bbb;  
+    padding-left: 20px;
+    border-left: 20px solid #c1ff72;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    box-shadow: 10px 3px 6px #bbb;
   }
 
+  .top_button2 {
+    width: 350px;
+    height: 60px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 50;
+    right: 0;
+    top: 90px;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    border-left: 20px solid #c1ff72;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    box-shadow: 10px 3px 6px #bbb;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 
-.about{
-  width:100%;
-  height: auto;
-  background-color: #fff;
-  position:relative;
-  display: flex;
-  flex-direction: column;
+  .top_button:hover {
+    transform: translateX(15px);
+    filter: brightness(90%);
+    transition: transform 0.3s ease;
+  }
 
+  .top_button2:hover {
+    transform: translateX(15px);
+    filter: brightness(90%);
+    transition: transform 0.3s ease;
+  }
 
+  .about {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
 
-}
+  .about_top {
+    position: relative;
+    width: 100%;
+    height: 950px;
+    overflow-x: auto;
+    overflow-y: unset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.about_top{
-  position:relative;
-  width:100%;
-  height:950px;
-  overflow-x: auto;
-  overflow-y: unset;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
- 
-}
+  .about_square_column1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-.about_square_column1{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+  .about_square_column1_left {
+    width: 500px;
+    padding: 60px;
+    text-align: center;
+  }
 
-.about_square_column1_left{
-  width:500px;
-  padding:60px;
-  text-align:center;
-}
+  .about_mik {
+    width: 200px;
+  }
 
-.about_mik{
+  .about_square_column1_right {
+    text-align: center;
 
-  width:200px;
-}
+    width: 500px;
+    color: #576066;
+    padding: 50px 0px 20px 0;
+  }
 
-.about_square_column1_right{
+  .about_square_column2 {
+    padding-top: 60px;
+  }
 
-text-align: center;
+  .about_circle {
+    width: 350px;
+  }
 
-  width:500px;
-  color:#576066;
-  padding: 50px 0px 20px 0;
-}
+  .about_description {
+    margin-top: 30px;
+    margin-left: 50px;
+    font-size: 18px;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    line-height: 15px;
+  }
 
-.about_square_column2{
-  padding-top: 60px;
-}
-
-
-.about_circle{
-  
-  width:350px;
- 
-
-}
-
-.about_description{
-  margin-top:30px;
-  margin-left:50px;
-  font-size:18px;
-  font-family:"Noto Serif JP", serif;
-  color:#576066;
-  line-height: 15px;
-}
-
-.job_card_list{
-  margin:0px 0  0  0px;
-    width:1000px;
-    display:flex;
-    justify-content:space-around;
+  .job_card_list {
+    margin: 0px 0 0 0px;
+    width: 1000px;
+    display: flex;
+    justify-content: space-around;
     list-style: none;
     flex-wrap: wrap;
     margin-bottom: 100px;
-    
   }
 
+  .strength {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    padding-left: 0px;
+  }
 
-.strength{
-  width:100%;
-  height: auto;
-  background-color: #fff;
-  padding-left:0px;
+  .strength_top {
+    width: 100%;
+    height: 300px;
+  }
 
-}
+  .strength_mik {
+    width: 350px;
+    margin-left: 20px;
+  }
 
-.strength_top{
-  width:100%;
-  height:300px;
+  .jinzairyoku_png {
+    width: 350px;
+    margin-left: 0px;
+    margin-bottom: 30px;
+  }
 
-}
+  .strength_content {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+  }
 
+  .strength_jinzairyoku {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    overflow-x: auto;
+  }
 
-.strength_mik{
-  width:350px;
-  margin-left:20px;
-}
+  .strength_jinzairyoku h3 {
+    margin-top: -120px;
+    margin-left: 10px;
+    font-size: 29px;
+    line-height: 50px;
+  }
+  .jinzairyoku_sentence {
+    width: 350px;
+    font-size: 17px;
+    line-height: 30px;
+    margin: 30px 30px 80px 10px;
+  }
+  .strength_ikuseiryoku {
+    width: 100%;
+    height: 880px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    position: relative;
+    overflow-x: auto;
+  }
 
-.jinzairyoku_png{
-width:350px;
-margin-left: 0px;
-margin-bottom: 30px;
-  
-}
+  .strength_ikusei_png {
+    width: 450px;
+    position: absolute;
+    left: 10px;
+    top: 0px;
+  }
 
-.strength_content{
+  .strength_ikuseiryoku h3 {
+    margin-left: 10px;
+    font-size: 25px;
+    position: absolute;
+    top: 280px;
+    left: 20px;
+    line-height: 50px;
+  }
+  .ikuseiryoku_sentence {
+    position: absolute;
+    top: 420px;
+    left: -70px;
+    width: 420px;
+    font-size: 17px;
+    line-height: 35px;
+    padding: 0 50px 0 50px;
 
-  width:100%;
-  height: auto;
-  background-color: #fff;
-}
+    margin: 30px 30px 30px 50px;
+  }
 
+  .strength_taiouryoku {
+    width: 100%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+  }
 
-.strength_jinzairyoku{
-  width:100%;
-  height:auto;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  font-family:"Noto Serif JP", serif; 
-  color:#576066;
-  overflow-x: auto;
-}
-
-.strength_jinzairyoku h3 {
-  margin-top:-120px;
-  margin-left:10px;
-  font-size:29px;
-  line-height: 50px;
-}
-.jinzairyoku_sentence {
-  width:350px;
-  font-size:17px;
-  line-height: 30px;
-  margin:30px 30px 80px 10px;
-
-}
-.strength_ikuseiryoku{
-width:100%;
-height:880px;
-display:flex;
-flex-direction: column;
-align-items: center;
-font-family:"Noto Serif JP", serif; 
-color:#576066;
-position:relative;
-overflow-x: auto;
-}
-
-.strength_ikusei_png{
-width:450px;
-position:absolute;
-left:10px;
-top:0px;
-}
-
-.strength_ikuseiryoku h3 {
-  margin-left:10px;
-  font-size:25px;
-  position:absolute;
-  top:280px;
-  left:20px;
-  line-height: 50px;
-}
-.ikuseiryoku_sentence {
-  position:absolute;
-  top:420px;
-  left:-70px;
-  width:420px;
-  font-size:17px;
-  line-height: 35px;
-  padding:0 50px 0 50px;
-
-  margin:30px 30px 30px 50px;
-
-}
-
-.strength_taiouryoku{
-  width:100%;
-  height:800px;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  font-family:"Noto Serif JP", serif; 
-  color:#576066;
-
-}
-
-.strength_taiou_png1{
-  /* width:380px;
+  .strength_taiou_png1 {
+    /* width:380px;
   margin-left:60px;
   margin-top:50px; */
-  display:none;
-}
+    display: none;
+  }
 
-.strength_taiou_png2{
-  width:380px;
-  margin-left:30px;
-  margin-top:-50px;
-}
+  .strength_taiou_png2 {
+    width: 380px;
+    margin-left: 30px;
+    margin-top: -50px;
+  }
 
-.strength_taiouryoku h3 {
-  width:400px;
-  margin-top:0px;
-  margin-left:30px;
-  font-size:24px;
-  line-height: 40px;
-  margin-bottom:30px;
+  .strength_taiouryoku h3 {
+    width: 400px;
+    margin-top: 0px;
+    margin-left: 30px;
+    font-size: 24px;
+    line-height: 40px;
+    margin-bottom: 30px;
+  }
 
-}
-
-.taiou_sentence{
-  width:300px;
-  font-size:17px;
-  line-height: 30px;
-  margin-top:-80px;
-  margin-left:30px;
-}
-
+  .taiou_sentence {
+    width: 300px;
+    font-size: 17px;
+    line-height: 30px;
+    margin-top: -80px;
+    margin-left: 30px;
+  }
 
   .menu_bar {
     margin-top: 60px;
@@ -2311,16 +2300,15 @@ top:0px;
     width: 100%;
     height: auto;
     background: #ffffff;
-    border: 18px solid rgb(0,0,0,0.1);
+    border: 18px solid rgb(0, 0, 0, 0.1);
     border-radius: 2px;
-
   }
 
   .gaiyou_title {
     width: 100%;
     height: auto;
     padding-left: 0px;
-    
+
     padding-top: 30px;
     display: flex;
     align-items: center;
@@ -2328,7 +2316,6 @@ top:0px;
   }
 
   .gaiyou_title h1 {
- 
     font-size: 40px;
   }
 
@@ -2350,80 +2337,80 @@ top:0px;
   }
 
   /*blog*/
-  .blog{
-    width:100%;
+  .blog {
+    width: 100%;
     height: auto;
     background-color: #fff;
-    font-family:"Noto Serif JP", serif;
-    color:#576066;
-    font-size:30px;
-    display:flex;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    font-size: 30px;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Zen Maru Gothic", sans-serif;
   }
-  
-  
-  .blog_title{
-  width:100%;
+
+  .blog_title {
+    width: 100%;
     margin-bottom: 50px;
-    margin-top:50px;
+    margin-top: 50px;
+    padding-left: 20px;
   }
 
+  .blog_title p {
+    font-size: 18px;
+  }
 
-.blog_title p{
-  font-size:18px;
-}
+  .blog_list {
+    width: 95%;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #c1ff72;
+    justify-content: center;
+    border-radius: 12px;
+    margin-bottom: 50px;
+  }
 
-.blog_list{
-  width:95%;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  background-color:#C1FF72;
-  justify-content: center;
-  border-radius: 12px;
-  margin-bottom: 50px;
+  .blog_detail {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    font-family: "Noto Serif JP", serif;
+    color: #576066;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-}
+  .blog_detail_title {
+    width: 90%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 
-.blog_detail{
-  width:100%;
-  height: auto;
-  background-color: #fff;
-  font-family:"Noto Serif JP", serif;
-  color:#576066;
-  font-size:18px;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Zen Maru Gothic", sans-serif;}
+  .blog_detail_img {
+    width: 90%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 30px;
+    margin-bottom: 10px;
+  }
 
-.blog_detail_title{
-  width:90%;
-  margin-top:50px;
-  margin-bottom:50px;
-}
+  .blog_detail_content {
+    width: 88%;
+    line-height: 43px;
+  }
 
+  .blog_detail_content h3 {
+    font-size: 30px;
+    margin: 50px 0 30px 0;
+  }
 
-.blog_detail_img{
-  width:90%;
-  height: 350px;
-  object-fit: cover;
-  border-radius:30px;
-  margin-bottom: 10px;
-}
-
-.blog_detail_content{
-  width:88%;
-  line-height: 43px;
-}
-
-.blog_detail_content h3{
-  font-size: 30px;
-  margin: 50px 0 30px 0;
-}
-
+  .blog_detail_content img {
+    width: 500px;
+    object-fit: cover;
+  }
 
   @media (prefers-color-scheme: dark) {
     .header {
@@ -2443,7 +2430,6 @@ top:0px;
       margin-right: 50px;
     }
 
-  
     .ham2_menu_item {
       width: 200px;
       list-style: none;
@@ -4282,7 +4268,6 @@ top:0px;
     }
 
     .gaiyou_title h1 {
- 
       font-size: 40px;
     }
 
@@ -4304,6 +4289,5 @@ top:0px;
     }
 
     /*blog*/
-
   }
 }
