ブログ記事追加、トップページ見出し

--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -278,7 +278,7 @@
     display: flex;
     align-items: center;
     padding-left: 20px;
-    border-left: 20px solid #c1ff72;
+    border-left: 20px solid #f03da0;
     font-family: "Noto Serif JP", serif;
     color: #576066;
     box-shadow: 10px 3px 6px #bbb;
