--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -577,8 +577,9 @@
 }
 
 .strength_mik {
-  width: 450px;
-  margin-left: 100px;
+  width: 650px;
+  margin-left: 0px;
+  margin-bottom: 100px;
 }
 
 .jinzairyoku_png {
