--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -240,13 +240,13 @@
 }
 
 .top_button {
-  width: 330px;
+  width: 300px;
   height: 60px;
   background-color: #fff;
   position: absolute;
   z-index: 50;
   right: 0;
-  top: 45px;
+  top: 150px;
   display: flex;
   align-items: center;
   padding-left: 20px;
@@ -299,6 +299,24 @@
   position: absolute;
   left: -20px;
   top: -20px;
+}
+
+.top_recruite {
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  width: 280px;
+  height: 100px;
+  background-color: deepskyblue;
+  border-radius: 10px;
+  z-index: 999;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .top_koinobori {
